--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
   <body>
     <header>
       <div class="logo">
+        <i class="fab fa-slack"></i>
         <span class="logo_name_top">Blogger</span>
       </div>
       <nav>
